Moved db connection files to specific folder and alter action class to interact with new connection file. Check if already stored and a insert a new app as an example.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -20,7 +20,7 @@
 <form id="infinite-form" action="" data-server="http://localhost/infinite-php/" data-app="BwX0d5GaDhf">
 	<p>Informe os dados do app</p>
 
-	<input type="text" name="name" class="FormField" placeholder="Insira o nome do app">
+	<input type="text" name="name_app" class="FormField" placeholder="Insira o nome do app">
 
 	<br><p>Regras futuramente</p><br>
 
