Setting some files rules on json. Separate post and app information but show both on response. Started to set up persistence functions for classes.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -55,7 +55,16 @@
 			},
 			files: {
 				rules: [
-					{}
+					{
+						name: 'fichapessoal',
+						contentType: 'pdf',
+						maxSize: 1000
+					},
+					{
+						name: 'fotoperfil',
+						contentType: 'image',
+						maxSize: 1000
+					}
 				]
 			}
 		}
